--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Ionic App</title>
 
-    <base href="/" />
+    <base href="https://xzoul.github.io/Portfolio2024/" />
 
     <meta name="color-scheme" content="light dark" />
     <meta
