--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Jimz Portfolio</title>
 
-    <!-- <base href="https://xzoul.github.io/Portfolio2024/" /> -->
+    <base href="https://xzoul.github.io/Portfolio2024/" />
     <base href="/" />
 
     <meta name="color-scheme" content="light dark" />
